--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,18 +8,19 @@ packages = [{include = "click_tools"}]
 
 
 [tool.poetry.dependencies]
-python = "^3.8"
-click = "^8.1.7"
-requests = "^2.31.0"
-validators = "^0.20.0"
+python = "^3.10"
+click = ">=7.0"
+requests = ">=2.0.0"
+validators = ">=0.0.0"
 
 
-[tool.poetry.group.dev]
+[tool.poetry.group.tests]
 optional = true
 
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.group.tests.dependencies]
 pre-commit = "^3.5.0"
+pytest = "^8.3.4"
 
 [build-system]
 requires = ["poetry-core"]
