--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "click-tools"
-version = "0.1.0"
+version = "1.0.0"
 description = "Tools for python click"
 authors = ["Roberto Alamos <roberto@aospa.cl>"]
 readme = "README.md"
@@ -21,6 +21,8 @@ optional = true
 [tool.poetry.group.tests.dependencies]
 pre-commit = "^3.5.0"
 pytest = "^8.3.4"
+responses = "^0.25.6"
+pytest-cov = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
